# las

./: .clang  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  CMakeLists.txt  README.md  \
.github/workflows/: build-and-test.yml  build_and_test.yml  cmake.yml
build-gcc11/test/: sm_test_map  test_map  test_zip
cmake/: CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  ProjectSettings.cmake  Sanitizers.cmake  StaticAnalyzers.cmake
docs/: index.md
examples/: CMakeLists.txt
examples/axpy/src/: axpy.cpp  axpy.hpp  axpy_skl3.cpp  main.cpp
examples/kmeans/src/: kmeans.cpp  kmeans.hpp  kmeans_skl3.cpp  kmeans_structs.cpp  kmeans_structs.hpp  main.cpp
examples/matrix-multiplication/src/: main.cpp  matrix-multiplications.cpp  matrix_multiplication.cpp  matrix_multiplication.hpp
include/las/: las.hpp
include/las/base/skeleton/: filter.hpp  reduce.hpp
include/las/base/structure/: aggregate.hpp
include/las/cpu/: layer.hpp
include/las/cpu/skeleton/: filter.hpp
include/las/cpu/structure/: template_method.hpp
include/las/omp/scheduler/: constant.hpp
include/las/omp/skeleton/: reduce.hpp
include/las/version/: config.hpp  config.hpp.in  dynamic.hpp  static.hpp
include/skl/: config.h  config.hpp.in  las.hpp  refine.hpp  skl.hpp
include/skl/aggregate/: dummy.hpp  index.hpp  zip.hpp  zips.hpp
include/skl/base/: layer.hpp
include/skl/base/aggregate/: concept.hpp  dummy.hpp  index.hpp  simple.hpp  zip.hpp
include/skl/base/skeleton/: decorator.hpp  filter.hpp  map.hpp  reduce.hpp  template_method.hpp
include/skl/base/structure/: aggregate.hpp  decorator.hpp  template_method.hpp
include/skl/cpu/: layer.hpp
include/skl/cpu/skeleton/: filter.hpp  map.hpp  proxy.hpp  reduce.hpp  template_method.hpp
include/skl/cpu/structure/: proxy.hpp  skeleton.hpp  template_method.hpp
include/skl/omp/: layer.hpp
include/skl/omp/kernel/: kernel.hpp  scheduler.hpp
include/skl/omp/scheduler/: constant.hpp  scheduler.hpp
include/skl/omp/skeleton/: map.hpp  proxy.hpp  reduce.hpp  skeleton.hpp  template_method.hpp
include/skl/omp/structure/: aggregate.hpp.bk  skeleton.hpp  template_method.hpp
include/skl/seq/: layer.hpp
include/skl/seq/data/: concepts.hpp
include/skl/seq/data/aggregate/: aggregate.hpp  dummy.hpp  index.hpp  simple.hpp  zip.hpp
include/skl/seq/data/iterator/: dummy.hpp  index.hpp  zip.hpp
include/skl/seq/kernel/: kernel.hpp
include/skl/seq/skeleton/: concepts.hpp  connector.hpp  filter.hpp  inplace_reduce.hpp  map.hpp  reduce.hpp  skeleton.hpp
include/skl/util/: tuple.hpp  util.hpp  utility.hpp  wrapper.hpp
include/skl/version/: config.hpp  config.hpp.in  default.hpp  dynamic.hpp  static.hpp
test/: CMakeLists.txt  adapter.cpp  filter.cpp  fusion.cpp  index.cpp  main.cpp  map.cpp  reduce.cpp  test_filter.cpp  test_fusion.cpp  test_map.cpp  test_reduce.cpp  test_simple.cpp  test_zip.cpp  threads.cpp  util.hpp  zip.cpp
